# vengine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  lowercase_paths.cmake  vcpkg.json
editor/: CMakeLists.txt  app.cpp  app.hpp  editor_module.cpp  editor_module.hpp  editor_scene.cpp  editor_scene.hpp
examples/app/: CMakeLists.txt  app.cpp  test_scene.cpp  test_scene.hpp  test_scene2.cpp  test_scene2.hpp
resources/models/: ant.mtl  aquarium.mtl  flower.mtl
resources/scripts/: camera.lua  move.lua
resources/shaders/: default.frag  default_new.frag  default_new.vert  fragment.glsl  shadow_depth.frag  shadow_depth.vert  skybox.vert  text.frag  vertex.glsl
src/: CMakeLists.txt
src/app/: app.cpp  app.hpp  test_layer.cpp  test_layer.hpp  test_module.cpp  test_module.hpp  test_scene.cpp  test_scene.hpp  test_scene2.cpp  test_scene2.hpp
src/game/: game.cpp  game.hpp  game_state.hpp  global.hpp
src/game/board/: board.cpp  board.hpp  board_state.hpp
src/game/tetromino/: tetromino.cpp  tetromino.hpp  tetromino_state.hpp
src/vengine/: global.hpp  vengine.cpp  vengine.hpp
src/vengine/commands/: command_handler.hpp
src/vengine/config/: config.cpp  config.hpp
src/vengine/core/: action.cpp  action.hpp  actions.cpp  actions.hpp  cameras.cpp  cameras.hpp  entry_point.cpp  error.hpp  event_manager.cpp  event_manager.hpp  event_system.cpp  event_system.hpp  events.hpp  i_resource.hpp  input_manager.cpp  input_manager.hpp  input_system.cpp  input_system.hpp  layer.hpp  mesh.cpp  mesh.hpp  mesh_loader.cpp  mesh_loader.hpp  model.cpp  model.hpp  model_loader.cpp  model_loader.hpp  module.hpp  resource_manager.cpp  resource_manager.hpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp  scenes.cpp  scenes.hpp  shader.cpp  shader.hpp  signal_system.cpp  signal_system.hpp  (+9 more)
src/vengine/ecs/: base_system.hpp  component_registry.hpp  components.cpp  components.hpp  ecs.cpp  ecs.hpp  entities.cpp  entities.hpp  entity.cpp  entity.hpp  entity_impl.hpp  systems.hpp
src/vengine/ecs/systems/: jolt_physics_system.cpp  jolt_physics_system.hpp  physics_system.cpp  physics_system.hpp  script_system.cpp  script_system.hpp
src/vengine/ecs_old/: component_manager.cpp  component_manager.hpp  components.hpp  entity_manager.cpp  entity_manager.hpp
src/vengine/ecs_old/systems/: movement_system.hpp
src/vengine/input/: input.cpp  input.hpp
src/vengine/renderer/: camera.cpp  camera.hpp  font.cpp  font.hpp  fonts.cpp  fonts.hpp  index_buffer.cpp  index_buffer.hpp  material.cpp  material.hpp  materials.cpp  materials.hpp  mesh.cpp  mesh.hpp  mesh_loader.cpp  mesh_loader.hpp  mesh_old.hpp  opengl_manager.cpp  opengl_manager.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_manager.cpp  shader_manager.hpp  shaders.cpp  shaders.hpp  skybox.cpp  skybox.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_layout.hpp  window.cpp  window.hpp
src/vengine/resources/shaders/: shader.vert.glsl
src/vengine/timer/: timer.cpp  timer.hpp
src/vengine/utils/: utils.cpp  utils.hpp
tests/: CMakeLists.txt  actions_tests.cpp  ecs_entities_tests.cpp  ecs_tests.cpp  event_system_tests.cpp  main.cpp  signal_system_tests.cpp  signals_tests.cpp  test_tests.cpp
